--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 
 go:
+  - 1.1
   - 1.2
   - 1.3
   - tip
@@ -10,4 +11,5 @@ before_install:
   - go get code.google.com/p/go.tools/cmd/cover
 
 script:
-    - ./test-coverage.sh
+    go test -v -parallel=8 -race -cover -coverprofile=profile.out
+    $HOME/gopath/bin/goveralls -coverprofile=profile.out -repotoken 04kTnPgwp65LWxqgAsuXnDazEahF5Wrht
